--- a/prisma-app/views/hello/edit.ejs
+++ b/prisma-app/views/hello/edit.ejs
@@ -12,27 +12,31 @@
 </head>
 
 <body class="container">
+
     <header>
         <h1 class="display-4">
             <%= title %>
         </h1>
     </header>
     <div role="main">
-        <p><%- content %></p>
-        <form method="post" action="/hello/add">
+        <p>
+            <%= content %>
+        </p>
+        <form method="post" action="/hello/edit">
+            <input type="hidden" name="id" value="<%= mydata.id %>">
             <div class="form-group">
                 <label for="name">NAME</label>
-                <input type="text" name="name" id="name" value="<%= form.name %>" class="form-control">
+                <input type="text" name="name" id="name" class="form-control" value="<%= mydata.name %>">
             </div>
             <div class="form-group">
                 <label for="mail">MAIL</label>
-                <td><input type="text" name="mail" id="mail" value="<%= form.mail %>" class="form-control">
+                <td><input type="text" name="mail" id="mail" class="form-control" value="<%= mydata.mail %>">
             </div>
             <div class="form-group">
                 <label for="age">AGE</label>
-                <td><input type="text" name="age" id="age" value="<%= form.age %>" class="form-control">
+                <td><input type="number" name="age" id="age" class="form-control" value="<%= mydata.age %>">
             </div>
-            <input type="submit" value="作成" class="btn btn-primary">
+            <input type="submit" value="更新" class="btn btn-primary">
         </form>
     </div>
 </body>
